k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
  labels:
    app: tic-tac-toe
spec:
  type: ClusterIP
  selector:
    app: tic-tac-toe
  ports:
  - port: 80
    targetPort: 80
