k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:701411677425:certificate/57f45359-317c-419c-af27-c5a9ced59694
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: tic-tac
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: digicashpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 80
  tls:
    - hosts:
        - digicashpro.com
      secretName: dummy-placeholder # Required but not used by ALB
